--- a/style/base.css
+++ b/style/base.css
@@ -12,6 +12,9 @@
 p#a:hover{                                       color:#8400ff; }
 p#thank_you:hover{                               color:#f100b5; }
 
+input[type="text"]:focus:hover { border-bottom: 1px solid #4b4b4b; }
+input[type="text"]:focus {       border-bottom: 1px solid #4b4b4b; width: 31.25em; z-index: 1; cursor: text; }
+
 
 *::-webkit-scrollbar{       width: 0.7em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
 *::-webkit-scrollbar-thumb{ border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: #4b4b4b33; }
@@ -25,14 +28,14 @@ div#code::-webkit-scrollbar-track{ width: 0.1em; border-radius: 0.5em 0.5em 0.5e
 
 
 html{   margin: -0.6em 5em 5em 3em; font-family: 'Nanum Gothic'; color: #4b4b4b; background-color: white; }
-header{ width: 100%; z-index: 1; background-color: white; position: fixed; display: block; margin-bottom: 2em; padding-top: 3em; padding-bottom: 2em; left: 0%; padding-left: 3em; }
+header{ z-index: 1; background-color: white; position: fixed; display: block; margin-bottom: 2em; padding: 3em 3em 2em 3em; left: 0%; }
 
 dd{ font-size: 0.9em; line-height: 2em; }
 dt{ font-size: 1em; line-height: 2em; font-weight: 800; }
 
-section{              display: block; margin-left: 22%; }
-section#body{         position: absolute; top: 8em; margin-left: 0; margin-right: 3%; }
-section#body section{ margin-bottom: 10em; z-index: 99999; }
+section{              display: block; margin-left: 22%; float: right !important; }
+section#body{         position: absolute; top: 8em; margin-left: 0; margin-right: 2% !important; }
+section#body section{ margin-bottom: 5em !important; z-index: 99999; }
 
 code{          display: inline; font-family: 'JetBrains Mono', 'D2Coding'; line-height: 2em; }
 div#code code{ text-shadow: 0em 0em 0.8em #ffffff; }
@@ -73,10 +76,15 @@ div#pls{  background-color: #ffffff; color: #00ffaa; box-shadow: 0em 0em 0.4em 0
 
 div#table{ overflow: auto; font-family: 'Nanum Gothic'; }
 div#sA{ margin-top: 1.5em; margin-bottom: 1.5em; }
+div#wrap { margin: 0em 6.25rem; display: block; position: relative; height: 3.75em; float: right; }
 
 
 img#kkotb_rfnc{                      width: 3em; height: auto; }
 img[id = "sttc"], img[id = "prttp"]{ width: 1.1em; margin-right: 0.5em; height: auto; }
+
+
+input[type="text"] {   height: 3rem; font-size: 1.3em; display: block; font-family: 'JetBrains Mono', "Nanum Gothic"; font-weight: 100; border: none; outline: none; color: #4b4b4b; padding: 0.1875em; padding-right: 3.75em; width: 0em; position: absolute; top: 0; right: 0; background: none; z-index: 3; transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000); cursor: pointer; }
+input[type="submit"] { height: 3rem; display: inline-block; color: #4b4b4b; background: url("../img/search.png") no-repeat; background-size: 3rem 3rem; width: 3rem; border: none; color: transparent; position: absolute; top: 0; right: 0; z-index: 2; cursor: pointer; }
 
 
 tr{     line-height: 2em !important; }
@@ -91,6 +99,11 @@ i{        font-family: 'JetBrains Mono I'; }
 
 @media screen and (max-width:800px){
     p#a:hover { color:#8400ff; }
+
+    input[type="text"]:focus{ width: 15.625em; z-index: 1; border-bottom: 1px solid #4b4b4b; cursor: text; }
+    input[type="text"]:visited{ border: none; }
+    input[type="text"]:hover{   border: none; }
+    input[type="text"]:active{  border: none; }
 
     div#sideBar::-webkit-scrollbar {       border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: #4b4b4b00; width: 0.2em; }
     div#sideBar::-webkit-scrollbar-thumb { border-radius: 0.5em 0.5em 0.5em 0.5em; }
@@ -127,11 +140,16 @@ i{        font-family: 'JetBrains Mono I'; }
 
     div#table{ overflow: auto; }
     div#sA{    margin-top: 0.7em; margin-bottom: 1em; }
-
+    div#wrap{     margin: 0em 4.2em; }
+    
     
     img#kkotb_rfnc{                      width: 1.5em; height: auto; }
     img[id = "sttc"], img[id = "prttp"]{ width: 0.8em; height: auto; margin-right: 0.25em;  }
-    
+
+
+    input[type="text"]{   height: 1.5rem; font-size: 0.65em; }
+    input[type="submit"]{ width: 2rem; height: 2rem; background-size: 1.5rem 1.5rem; }
+
 
     tr{       padding: 1em 1em 1em 1em; font-size: 0.8em !important; line-height: 0.8em; }
     th, td{   border-bottom: 0.016em solid #4b4b4b; padding: 0.8em 0.8em 0.8em 0.8em; }
@@ -142,6 +160,9 @@ i{        font-family: 'JetBrains Mono I'; }
 
 @media(prefers-color-scheme: dark){
     p#a:hover { color:#ff0d86; }
+
+    input[type="text"]:focus:hover { border-bottom: 1px solid #ffffff; }
+    input[type="text"]:focus {       border-bottom: 1px solid #ffffff; width: 31.25em; z-index: 1; cursor: text; }
 
 
     *::-webkit-scrollbar{       border-radius: 0.5em 0.5em 0.5em 0.5em; width: 0.7em; }
@@ -157,9 +178,7 @@ i{        font-family: 'JetBrains Mono I'; }
     html, header, div, section{ background-color: #333333 !important; }
 
     table{ border-top: 0.3em solid white !important; border-left: 0em solid #333333 !important; border-right: 0em solid #333333 !important; }
-    td#no{
-        color: rgb(255, 0, 0) !important;
-    }
+    td#no{ color: rgb(255, 0, 0) !important; }
     
     
     p#title, p#description, p#stitle, p#code, p#a, p#thank_you, th, td, dt, dd, a{ color: white !important; }
@@ -170,6 +189,12 @@ i{        font-family: 'JetBrains Mono I'; }
     div#side{ background-color: rgb(255, 255, 255); }
 
     div#code{ background-color: black !important; box-shadow: 0em 0em 0.8em 0em rgb(31, 31, 31); }
+
+    div#wrap { margin: 0em 6.25rem; display: block; position: relative; height: 3.75em; float: right; }
+
+
+    input[type="text"] {   height: 3rem; font-size: 1.3em; display: block; font-family: 'JetBrains Mono', "Nanum Gothic"; font-weight: 100; border: none; outline: none; color: #ffffff; padding: 0.1875em; padding-right: 3.75em; width: 0em; position: absolute; top: 0; right: 0; background: none; z-index: 3; transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000); cursor: pointer; }
+    input[type="submit"] { height: 3rem; display: inline-block; background: url("../img/search_dark.png") no-repeat; background-size: 3rem 3rem; width: 3rem; border: none; color: transparent; position: absolute; top: 0; right: 0; z-index: 2; cursor: pointer; }
 
     
     th, td{ border-bottom: 0.016em solid white !important; }
