--- a/style/mobile.css
+++ b/style/mobile.css
@@ -1,14 +1,14 @@
 @media screen and (max-width:800px){
-    p#a:hover { color:#8400ff; }
+    p.a:hover { color:#8400ff; }
 
     input[type="text"]:focus{ width: 15.625em; z-index: 1; border-bottom: 1px solid #4b4b4b; cursor: text; }
     input[type="text"]:visited{ border: none; }
     input[type="text"]:hover{   border: none; }
     input[type="text"]:active{  border: none; }
 
-    div#sideBar::-webkit-scrollbar {       border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: #4b4b4b00; width: 0.2em; }
-    div#sideBar::-webkit-scrollbar-thumb { border-radius: 0.5em 0.5em 0.5em 0.5em; }
-    div#sideBar::-webkit-scrollbar-track { border-radius: 0.5em 0.5em 0.5em 0.5em; }
+    *::-webkit-scrollbar {       border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: #4b4b4b00; width: 0.2em; height: 0.4em !important; }
+    *::-webkit-scrollbar-thumb { border-radius: 0.5em 0.5em 0.5em 0.5em; }
+    *::-webkit-scrollbar-track { border-radius: 0.5em 0.5em 0.5em 0.5em; }
     
 
     html{   margin: -2em 1.5em 0.5em 1.5em; }
@@ -22,14 +22,14 @@
     table{ margin-top: 1.5em; margin-bottom: 1.5em; font-size: 0.9em; margin-right: 3em; }
 
 
-    p#title{  font-size: 1em; }
-    p#stitle{ font-size: 0.9em; }
-    p#description{ font-size: 0.8em; }
+    p.title{  font-size: 1em; }
+    p.stitle{ font-size: 0.9em; }
+    p.dscrpt{ font-size: 0.8em; }
 
-    p#crfBox{  line-height: 2em; }
+    p.crfBox{  line-height: 2em; }
 
-    p#code{      font-size: 0.7em; }
-    p#a{         font-size: 0.8em; transition:color .2s ease; }
+    p.code{      font-size: 0.7em; }
+    p.a{         font-size: 0.8em; transition:color .2s ease; }
     p#thank_you{ font-size: 0.8em; }
 
 
@@ -37,9 +37,9 @@
     div#blank{   display: none; }
     div#sideBar{ display: none; border-radius: 0em 0.5em 0.5em 0.5em; position: fixed !important; left: 0%; top: 0%; overflow: auto; width: 30% !important; height: 87% !important; margin: 0; margin-top: 4.5em; }
     
-    div#code, div#crf, div#pls{ font-size: 0.8em; margin-top: 1.3em; padding: 0.1em 0.5em 0.1em 0.5em; border-radius: 0.4em 0.4em; white-space:nowrap; overflow: auto; }
+    div.code, div.crf, div.pls{ font-size: 0.8em; margin-top: 1.3em; padding: 0.1em 0.5em 0.1em 0.5em; border-radius: 0.4em 0.4em; white-space:nowrap; overflow: auto; }
 
-    div#table{ overflow: auto; }
+    div.table{ overflow: auto; }
     div#sA{    margin-top: 0.7em; margin-bottom: 1em; }
     div#wrap{  margin: 0em 0em }
     
