--- a/style/notfound.css
+++ b/style/notfound.css
@@ -6,7 +6,7 @@
     color: #4b4b4b;
 }
 
-#title{
+.title{
     font-size: 2.2em;
     font-weight: 700;
 }
@@ -27,7 +27,7 @@ div{
 }
 
 @media screen and (max-width:800px){
-    #title{
+    .title{
         font-size: 1.7em;
         font-weight: 700;
     }
@@ -47,7 +47,7 @@ div{
         background-color: #4b4b4b;
     }
 
-    #title, #sT{
+    .title, #sT{
         color: white;
     }
 }
