--- a/style/base.css
+++ b/style/base.css
@@ -80,7 +80,7 @@ div#wrap { margin: 0em 6.25rem; display: block; position: relative; height: 3.75
 
 
 img#kkotb_rfnc{                      width: 3em; height: auto; }
-img[id = "sttc"], img[id = "prttp"]{ width: 1.1em; margin-right: 0.5em; height: auto; }
+img[class = "sttc"], img[class = "prttp"]{ width: 1.1em; margin-right: 0.5em; height: auto; }
 
 
 input[type="text"] {   height: 3rem; font-size: 1.3em; display: block; font-family: 'JetBrains Mono', "Nanum Gothic"; font-weight: 100; border: none; outline: none; color: #4b4b4b; padding: 0.1875em; padding-right: 3.75em; width: 0em; position: absolute; top: 0; right: 0; background: none; z-index: 3; transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000); cursor: pointer; }
