--- a/style/base.css
+++ b/style/base.css
@@ -7,24 +7,26 @@
 
 
 
-#kkotb_rfnc:hover, p.a:hover, li.sA:hover{       cursor: pointer; }
-#kkotb_rfnc:visited, p.a:visited, li.sA:visited{ cursor: default; }
-p.a:hover{                                       color:#8400ff; }
+#kkotb_rfnc:hover, li.a:hover, li.sA:hover, div.thanks_box *:hover{         cursor: pointer; }
+#kkotb_rfnc:visited, li.a:visited, li.sA:visited, div.thanks_box *:visited{ cursor: default; }
+li.a:hover{                                      color:#8400ff; }
 p#thank_you:hover{                               color:#f100b5; }
+
+li.a::before{ content: ''; background: url('../img/link.png') no-repeat; background-size: 1.1em 1.1em; width: 1.1em; height: 1.1em; display: inline-block; padding-left: 0.3em !important; }
 
 input[type="text"]:focus:hover { border-bottom: 1px solid #4b4b4b; }
 input[type="text"]:focus {       border-bottom: 1px solid #4b4b4b; width: 31.25em; z-index: 1; cursor: text; }
 
 
-*::-webkit-scrollbar{       width: 0.7em; height: 0.7em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
+*::-webkit-scrollbar{       width: 0.6em; height: 0.6em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
 *::-webkit-scrollbar-thumb{ border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: #4b4b4b30; }
 *::-webkit-scrollbar-track{ border-radius: 0.5em 0.5em 0.5em 0.5em; }
 
 
-div#sideBar::-webkit-scrollbar{    width: 0.7em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
-div.code::-webkit-scrollbar{       width: 0.1em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
-div.code::-webkit-scrollbar-thumb{ width: 0.1em; border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: #414141;  }
-div.code::-webkit-scrollbar-track{ width: 0.1em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
+div#sideBar::-webkit-scrollbar{    width: 0.6em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
+div.code::-webkit-scrollbar{       width: 0.6em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
+div.code::-webkit-scrollbar-thumb{ width: 0.6em; border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: #000000;  }
+div.code::-webkit-scrollbar-track{ width: 0.6em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
 
 
 html{   margin: -0.6em 5em 5em 3em; font-family: 'Nanum Gothic'; color: #4b4b4b; background-color: white; }
@@ -35,10 +37,10 @@ dt{ font-size: 1em; line-height: 2em; font-weight: 800; }
 
 section{              display: block; margin-left: 22%; float: right !important; }
 section#body{         position: absolute; top: 8em; right: 0; margin-left: 0em !important; margin-right: 3em !important; }
-section#body section{ margin-bottom: 5em !important; z-index: 99999; }
+section#body section{ margin-bottom: 3em !important; z-index: 99999; }
 
 code{          display: inline; font-family: 'JetBrains Mono', 'D2Coding'; line-height: 2em; }
-div.code code{ text-shadow: 0em 0em 0.8em #ffffff; }
+div.code pre code{ text-shadow: 0em 0em 0.8em #ffffff; }
 table{         width: 100%; border-top: 0.3em solid #4b4b4b; border-left: 0em solid white; border-right: 0em solid white; border-collapse: collapse; margin: auto; margin-top: 2.5em; margin-bottom: 2.5em; font-size: 1em; }
 
 
@@ -48,21 +50,13 @@ p.stitle{      font-size: 1.5em; font-weight: bold; }
 p.dscrpt{ font-size: 1em; display: inline; line-height: 2em; }
 
 p.code{             display: inline; background-color: #f1f1f1; margin: 0.2em 0.2em; border-radius: 0.4em 0.4em; font-family: 'JetBrains Mono', 'D2Coding'; font-size: 0.9em; padding: 0.2em 0.2em; line-height: 2em; }
-p.a{                display: inline; font-weight: bold; color: #4b4b4b; font-style: italic; font-family: 'Nanum Gothic'; line-height: 2em; transition:color 1s ease; }
-p.crfBox, p.plsBox{ display: inline; font-weight: bold; line-height: 2em; font-family: 'JetBrains Mono'; }
-p#thank_you{        display: inline; color: #4b4b4b; line-height: 2em; transition:color 1s ease; }
-
-p.codeBox, p.keyword, p.ann, p.var, p.str, p.reg, p.num{ display: inline !important; line-height: 2em; }
-
-p.keyword{ color: #ff0d86; text-shadow: 0em 0em 0.8em #ff0d86; }
-p.ann{     color: #8b8b8b; text-shadow: 0em 0em 0.8em #8b8b8b; }
-p.var{     color: #00ffaa; text-shadow: 0em 0em 0.8em #00ffaa; }
-p.str{     color: #ffc400; text-shadow: 0em 0em 0.8em #ffc400; }
-p.reg{     color: #00ffff; text-shadow: 0em 0em 0.8em #00ffff; }
-p.num{     color: #d400ff; text-shadow: 0em 0em 0.8em #d400ff; }
+p.crfBox, p.plsBox{ display: inline; line-height: 2em; font-family: 'JetBrains Mono', 'D2Coding'; }
+p.crfBox          { text-shadow: 0em 0em 0.2em rgb(255, 0, 140); }
+p.plsBox          { text-shadow: 0em 0em 0.2em #00ffaa; }
+p#thank_you{        display: inline; color: #4b4b4b; line-height: 5em; transition:color 1s ease; }
 
 
-div.content{ margin-bottom: 3em; }
+div.content{ margin-bottom: 5em; }
 div#side{    position: fixed; background-color: white; width: 20%; height: 100%; }
 div#blank{   position: fixed; background-color: white; width: 16%; height: 100%; padding-left: 2em; }
 div#sideBar{ position: fixed; background-color: white; width: 16%; height: 75%; padding-left: 3em; display: block; overflow: auto; }
@@ -73,13 +67,17 @@ div.code, div.crf, div.pls{ margin-top: 1.3em; margin-bottom: 2em; border-radius
 div.code{ background-color: #4b4b4b; color: white; box-shadow: 0em 0em 0.8em 0em #4b4b4b; }
 div.crf{  background-color: #ffffff; color: rgb(255, 0, 140); box-shadow: 0em 0em 0.4em 0em rgb(255, 0, 140); border-left: 1em solid rgb(255, 0, 140); }
 div.pls{  background-color: #ffffff; color: #00ffaa; box-shadow: 0em 0em 0.4em 0em #00ffaa; border-left: 1em solid #00ffaa; }
+div#imgBox{ margin: 3em 0em; }
+div.thanks_box{ display: inline-block; margin-right: 5em; margin-bottom: 5em !important; }
 
 div.table{ overflow: auto; font-family: 'Nanum Gothic'; }
-div#sA{ margin-top: 1.5em; margin-bottom: 1.5em; }
+div#sA{ margin-top: 1.5em; margin-bottom: 2.5em; }
 div#wrap { margin: 0em 6.25rem; display: block; position: relative; height: 3.75em; float: right; }
 
 
 img#kkotb_rfnc, img#nolbo{ width: 3em; height: auto; }
+img.moreImg { height: 7em; width: auto; margin: 5em 0em; }
+img.thank { width: 5em; height: auto; display: inline; filter: invert(80%); }
 
 img[class = "sttc"], img[class = "prttp"]{ width: 1.1em; margin-right: 0.5em; height: auto; }
 
@@ -94,5 +92,8 @@ td#no{  font-weight: bold; color: red; }
 
 
 sup, sub{ font-size: 70%; }
-li.sA{    font-size: 0.9em; font-weight: bold; color: #8400ff; }
+li{ font-family: 'Nanum Gothic'; }
+li.dscrpt{ font-size: 1em; line-height: 2em; }
+li.sA{    font-size: 0.9em; font-weight: bold; color: #8400ff; line-height: 1em !important; }
+li.a{     display: inline; font-weight: bold; color: #4b4b4b; font-family: 'Nanum Gothic'; line-height: 2em; transition:color 1s ease; }
 i{        font-family: 'JetBrains Mono I'; }
