--- a/style/dark.css
+++ b/style/dark.css
@@ -8,24 +8,27 @@
 
 @media(prefers-color-scheme: dark){
     
-    #kkotb_rfnc:hover, p.a:hover, li.sA:hover{       cursor: pointer; }
-    #kkotb_rfnc:visited, p.a:visited, li.sA:visited{ cursor: default; }
-    p.a:hover{                                       color:#ff0d86; }
-    p#thank_you:hover{                               color:#f100b5; }
+    #kkotb_rfnc:hover, li.a:hover, li.sA:hover{       cursor: pointer; }
+    #kkotb_rfnc:visited, li.a:visited, li.sA:visited{ cursor: default; }
+    li.a:hover{                                       color:#ff0d86; }
+    p#thank_you:hover{                                color:#f100b5; }
+
+    li.a::before{ content: ''; background-image: url('../img/link_dark.png'); }
 
     input[type="text"]:focus:hover { border-bottom: 1px solid #ffffff; }
     input[type="text"]:focus {       border-bottom: 1px solid #ffffff; width: 31.25em; z-index: 1; cursor: text; }
 
 
-    *::-webkit-scrollbar{       width: 0.7em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
+    *::-webkit-scrollbar{       width: 0.6em; height: 0.6em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
     *::-webkit-scrollbar-thumb{ border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: #ffffff59; }
     *::-webkit-scrollbar-track{ border-radius: 0.5em 0.5em 0.5em 0.5em; }
 
 
-    div#sideBar::-webkit-scrollbar{    width: 0.7em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
-    div.code::-webkit-scrollbar{       width: 0.1em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
-    div.code::-webkit-scrollbar-thumb{ width: 0.1em; border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: #ffffff59;  }
-    div.code::-webkit-scrollbar-track{ width: 0.1em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
+    div#sideBar::-webkit-scrollbar{    width: 0.6em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
+    div.code::-webkit-scrollbar{       width: 0.6em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
+    div.code::-webkit-scrollbar-thumb{ width: 0.6em; border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: #414141;  }
+    div.code::-webkit-scrollbar-track{ width: 0.6em; border-radius: 0.5em 0.5em 0.5em 0.5em; }
+
 
 
     html{   margin: -0.6em 5em 5em 3em; font-family: 'Nanum Gothic'; color: #ffffff; background-color: #333333; }
@@ -49,18 +52,8 @@
     p.dscrpt{ font-size: 1em; display: inline; line-height: 2em; }
 
     p.code{             display: inline; background-color: black; margin: 0.2em 0.2em; border-radius: 0.4em 0.4em; font-family: 'JetBrains Mono', 'D2Coding'; font-size: 0.9em; padding: 0.2em 0.2em; line-height: 2em; }
-    p.a{                display: inline; font-weight: bold; color: #ffffff; font-style: italic; font-family: 'Nanum Gothic'; line-height: 2em; transition:color 1s ease; }
-    p.crfBox, p.plsBox{ display: inline; font-weight: bold; line-height: 2em; font-family: 'JetBrains Mono'; }
+    p.crfBox, p.plsBox{ display: inline; line-height: 2em; font-family: 'JetBrains Mono'; }
     p#thank_you{        display: inline; color: #ffffff; line-height: 2em; transition:color 1s ease; }
-
-    p.codeBox, p.keyword, p.ann, p.var, p.str, p.reg, p.num{ display: inline !important; line-height: 2em; }
-
-    p.keyword{ color: #ff0d86; text-shadow: 0em 0em 0.8em #ff0d86 !important; }
-    p.ann{     color: #8b8b8b; text-shadow: 0em 0em 0.8em #8b8b8b !important; }
-    p.var{     color: #00ffaa; text-shadow: 0em 0em 0.8em #00ffaa !important; }
-    p.str{     color: #ffc400; text-shadow: 0em 0em 0.8em #ffc400 !important; }
-    p.reg{     color: #00ffff; text-shadow: 0em 0em 0.8em #00ffff !important; }
-    p.num{     color: #d400ff; text-shadow: 0em 0em 0.8em #d400ff !important; }
 
 
     div.content{ margin-bottom: 3em; }
@@ -82,6 +75,7 @@
 
     img#kkotb_rfnc{                      width: 3em; height: auto; }
     img[id = "sttc"], img[id = "prttp"]{ width: 1.1em; margin-right: 0.5em; height: auto; }
+    img.thank{ filter: invert(0%); }
 
 
     input[type="text"] {   height: 3rem; font-size: 1.3em; display: block; font-family: 'JetBrains Mono', "Nanum Gothic"; font-weight: 100; border: none; outline: none; color: #ffffff; padding: 0.1875em; padding-right: 3.75em; width: 0em; position: absolute; top: 0; right: 0; background: none; z-index: 3; transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000); cursor: pointer; }
@@ -94,7 +88,8 @@
 
 
     sup, sub{ font-size: 70%; }
-    li.sA{    font-size: 0.9em; font-weight: bold; color: #8400ff; }
+    li.sA{    font-size: 0.9em; font-weight: bold; color: #f100b5; }
+    li.a{     display: inline; font-weight: bold; color: white; font-family: 'Nanum Gothic'; line-height: 2em; transition:color 1s ease; }
     i{        font-family: 'JetBrains Mono I'; }
 
 
