--- a/style/base.css
+++ b/style/base.css
@@ -50,9 +50,7 @@ p.stitle{      font-size: 1.5em; font-weight: bold; }
 p.dscrpt{ font-size: 1em; display: inline; line-height: 2em; }
 
 p.code{             display: inline; background-color: #f1f1f1; margin: 0.2em 0.2em; border-radius: 0.4em 0.4em; font-family: 'JetBrains Mono', 'D2Coding'; font-size: 0.9em; padding: 0.2em 0.2em; line-height: 2em; }
-p.crfBox, p.plsBox{ display: inline; line-height: 2em; font-family: 'JetBrains Mono', 'D2Coding'; }
-p.crfBox          { text-shadow: 0em 0em 0.2em rgb(255, 0, 140); }
-p.plsBox          { text-shadow: 0em 0em 0.2em #00ffaa; }
+p.crfBox, p.plsBox{ display: inline; line-height: 2em; font-family: 'JetBrains Mono', 'D2Coding'; font-weight: bold; }
 p#thank_you{        display: inline; color: #4b4b4b; line-height: 5em; transition:color 1s ease; }
 
 
