--- a/style/base.css
+++ b/style/base.css
@@ -5,300 +5,336 @@
 @font-face{ font-family: 'JetBrains Mono I'; src:url(font/JetBrainsMono-Medium-Italic.woff) format('woff'); }
 @font-face{ font-family: 'D2Coding'; src:url(font/D2Coding.woff) format('woff'); }
 
-*::-webkit-scrollbar{
-    width: 0rem; 
-    height: 0rem; 
-}
+@media screen and (min-width:801px){
+    *::-webkit-scrollbar{
+        width: 0rem; 
+        height: 0rem; 
+    }
 
-li.a::before{
-    content: ''; 
-    background: url('../img/link.png') no-repeat; 
-    background-size: 1.1em 1.1em; 
-    filter: invert(100%);
-    width: 1.1em; 
-    height: 1.1em; 
-    display: inline-block; 
-    padding-left: 0.3em !important; 
-}
+    div.table, div.code, div#imgBox::-webkit-scrollbar{       width: 0.6em; height: 0.4rem; border-radius: 0.5em 0.5em 0.5em 0.5em; }
+    div.table, div.code, div#imgBox::-webkit-scrollbar-thumb{ width: 0.6em; height: 0.4rem; border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: black;  }
+    div.table, div.code, div#imgBox::-webkit-scrollbar-track{ width: 0.6em; height: 0.4rem; border-radius: 0.5em 0.5em 0.5em 0.5em; }
+    div.crf::-webkit-scrollbar-thumb{ width: 0.6em; height: 0.4rem; border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: #ff00aa;  }
+    div.pls::-webkit-scrollbar-thumb{ width: 0.6em; height: 0.4rem; border-radius: 0.5em 0.5em 0.5em 0.5em; background-color: #00ffc8;  }
 
-li.sA::before{
-    content: ''; 
-    background: url('../img/content.png') no-repeat; 
-    background-size: 1.1em 1.1em;
-    filter: invert(100%);
-    width: 1.1em; 
-    height: 1.1em; 
-    display: inline-block; 
-    padding-left: 0.3em !important; 
-}
+    li.a::before{
+        content: ''; 
+        background: url('../img/link.png') no-repeat; 
+        background-size: 1.1em 1.1em; 
+        filter: invert(100%);
+        width: 1.1em; 
+        height: 1.1em; 
+        display: inline-block; 
+        padding-left: 0.3em !important; 
+    }
 
-li.sA, li.a, aside dt, img#docs, dd:hover {
-    cursor: pointer;
-}
+    li.sA::before{
+        content: ''; 
+        background: url('../img/content.png') no-repeat; 
+        background-size: 1.1em 1.1em;
+        filter: invert(100%);
+        width: 1.1em; 
+        height: 1.1em; 
+        display: inline-block; 
+        padding-left: 0.3em !important; 
+    }
 
-aside:hover {
-    width: 35rem;
-    transition-delay: 0s;
-}
+    li.sA, li.a, aside dt, img#docs, dd, div.code:hover {
+        cursor: pointer;
+    }
 
-aside dt:hover {
-    background-color: #515151;
-}
+    aside:hover {
+        width: 35rem;
+        transition-delay: 0s;
+    }
 
+    aside dt:hover {
+        background-color: #515151;
+    }
 
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Noto Sans', 'Noto Sans KR';
-    font-size: 1rem;
-}
+    * {
+        margin: 0;
+        padding: 0;
+        font-family: 'Noto Sans', 'Noto Sans KR';
+        font-size: 1rem;
+    }
 
-html, body {
-    width: 100%;
-    height: 100%;
-}
+    html, body {
+        width: 100%;
+        height: 100%;
+    }
 
-body {
-    
-}
+    aside, article#body * {
+        display: inline-block;
+    }
 
-aside, article#body * {
-    display: inline-block;
-}
+    aside {
+        position: fixed;
+        background: black;
+        color: white;
+        width: 8rem;
+        height: 100%;
+        padding: 3rem 1rem;
+        text-align: center;
+        z-index: 99999;
 
-aside {
-    position: fixed;
-    background: black;
-    color: white;
-    width: 8rem;
-    height: 100%;
-    padding: 3rem 1rem;
-    text-align: center;
-    z-index: 99999;
+        transition-property: width;
+        transition-duration: 0.55s;
+    }
 
-    transition-property: width;
-    transition-duration: 0.55s;
-}
+    aside dl {
+        position: relative;
+        top: 10rem;
+        width: 8rem;
+    }
 
-aside dl {
-    position: relative;
-    top: 10rem;
-    width: 8rem;
-}
+    aside dt {
+        height: 2.2rem;
+        margin-bottom: 2.2rem;
+        padding: 0.5rem 0;
+        border-radius: 0.5rem;
+        position: relative;
+        left: 0;
 
-aside dt {
-    height: 2.2rem;
-    margin-bottom: 2.2rem;
-    padding: 0.5rem 0;
-    border-radius: 0.5rem;
-    position: relative;
-    left: 0;
+        transition-property: background;
+        transition-duration: 0.4s;
+    }
 
-    transition-property: background;
-    transition-duration: 0.4s;
-}
+    aside span#list {
+        display: none;
+        width: 15rem;
+        opacity: 0;
+        text-align: left;
+        position: absolute;
+        top: 0rem;
+        left: 0rem;
+    }
 
-aside span#list {
-    display: none;
-    width: 15rem;
-    opacity: 0;
-    text-align: left;
-    position: absolute;
-    top: 0rem;
-    left: 0rem;
-}
+    span#list h1 {
+        font-size: 1.7rem;
+        font-weight: bold;
+        position: absolute;
+        top: -13.2rem;
+    }
 
-span#list h1 {
-    font-size: 1.7rem;
-    font-weight: bold;
-    position: absolute;
-    top: -13.2rem;
-}
+    span#list dd {
+        font-size: 1.1rem;
+        display: inline-block;
+        font-weight: 500;
+        margin-bottom: 1.5rem;
+    }
 
-span#list dd {
-    font-size: 1.1rem;
-    display: inline-block;
-    font-weight: 500;
-    margin-bottom: 1.5rem;
-}
+    div#docs_space {
+        position: relative;
+        left: 0;
+        width: 8rem;
+    }
 
-div#docs_space {
-    position: relative;
-    left: 0;
-    width: 8rem;
-}
+    img#docs {
+        width: 3rem;
+        height: 3rem;
+    }
 
-img#docs {
-    width: 3rem;
-    height: 3rem;
-}
+    img.side_icon {
+        width: 2.2rem;
+        height: auto;
+        filter: invert(50%);
+    }
 
-img.side_icon {
-    width: 2.2rem;
-    height: auto;
-    filter: invert(50%);
-}
+    img#this {
+        filter: invert(0%);
+    }
 
-img#this {
-    filter: invert(0%);
-}
+    article {
+        padding: 5rem 4rem;
+        width: calc(100% - 18rem);
+        float: right;
+        overflow: visible;
+    }
 
-article {
-    padding: 5rem 4rem;
-    width: calc(100% - 18rem);
-    float: right;
-    overflow: visible;
-}
+    div.content {
+        margin-top: 4rem;
+        margin-bottom: 4rem;
+        width: 100%;
+    }
 
-div.content {
-    margin-top: 4rem;
-    margin-bottom: 4rem;
-    width: 100%;
-}
+    p {
+        display: inline;
+    }
 
-p {
-    display: inline;
-}
+    p.title {
+        display: block;
+        font-size: 1.9rem;
+        font-weight: 550;
+        margin-bottom: 2.3rem;
+    }
 
-p.title {
-    display: block;
-    font-size: 1.9rem;
-    font-weight: 550;
-    margin-bottom: 2.3rem;
-}
+    p.stitle {
+        display: block;
+        font-size: 1.4rem;
+        font-weight: 550;
+        margin-bottom: 2.3rem;
+    }
 
-p.stitle {
-    display: block;
-    font-size: 1.4rem;
-    font-weight: 550;
-    margin-bottom: 2.3rem;
-}
+    p.dscrpt, p.code {
+        line-height: 2rem;
+        white-space: pre-line;
+    }
 
-p.dscrpt, p.code {
-    line-height: 2rem;
-    white-space: pre-line;
-}
+    p.code {
+        font-family: 'JetBrains Mono', 'D2Coding';
+        font-size: 0.9rem;
+        background-color: #ebebeb;
+        padding: 0.1rem 0.2rem;
+        border-radius: 0.4rem;
+    }
 
-p.code {
-    font-family: 'JetBrains Mono', 'D2Coding';
-    font-size: 0.9rem;
-    background-color: #ebebeb;
-    padding: 0.1rem 0.2rem;
-    border-radius: 0.3rem;
-}
+    li.a, li.sA {
+        list-style: none;
+        line-height: 2rem;
+        font-size: 1rem;
+    }
 
-li.a, li.sA {
-    list-style: none;
-    line-height: 2rem;
-    font-size: 1rem;
-}
+    li.a {
+        font-weight: bold;
+        display: inline-block;
+    }
 
-li.a {
-    font-weight: bold;
-    display: inline-block;
-}
+    li.dscrpt {
+        line-height: 2rem;
+        white-space: pre-line;
+    }
 
-li.dscrpt {
-    line-height: 2rem;
-    white-space: pre-line;
-}
+    div#sA {
+        margin-top: 2.3rem;
+        margin-bottom: 2.3rem;
+    }
 
-div#sA {
-    margin-top: 2.3rem;
-    margin-bottom: 2.3rem;
-}
+    div.code, div.crf, div.pls {
+        padding: 1.5rem;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        border-radius: 1rem;
+        white-space: nowrap;
+        overflow: auto;
+    }
 
-div.code, div.crf, div.pls {
-    padding: 1.5rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    border-radius: 1rem;
-    white-space: nowrap;
-    overflow: auto;
-}
+    div.code {
+        background: #f7f7f7;
+        box-shadow: 0rem 0rem 1rem 0rem #dddddd;
+    }
 
-div.code {
-    background: #f7f7f7;
-    box-shadow: 0rem 0rem 1rem 0rem #dddddd;
-    overflow: auto;
-    white-space: nowrap;
-}
+    div.code code {
+        font-size: 0.9rem;
+        font-family: 'JetBrains Mono', 'D2Coding';
+        line-height: 2rem;
+    }
 
-div.code code {
-    font-size: 0.9rem;
-    font-family: 'JetBrains Mono', 'D2Coding';
-    line-height: 2rem;
-}
+    div.pls {
+        background: white;
+        box-shadow: 0rem 0rem 1rem 0rem #00ffc8;
+    }
 
-div.pls {
-    background: white;
-    box-shadow: 0rem 0rem 1rem 0rem #00ffc8;
-}
+    div.pls p.plsBox {
+        font-size: 0.9rem;
+        line-height: 2rem;
+        font-weight: bold;
+        color: #00ffc8;
+    }
 
-div.pls p.plsBox {
-    font-size: 0.9rem;
-    line-height: 2rem;
-    font-weight: bold;
-    color: #00ffc8;
-}
+    div.crf {
+        background: white;
+        box-shadow: 0rem 0rem 1rem 0rem #ff00aa;
+    }
 
-div.crf {
-    background: white;
-    box-shadow: 0rem 0rem 1rem 0rem #ff00aa;
-}
+    div.crf p.crfBox {
+        font-size: 0.9rem;
+        line-height: 2rem;
+        font-weight: bold;
+        color: #ff00aa;
+        overflow: auto;
+        white-space: nowrap;
+    }
 
-div.crf p.crfBox {
-    font-size: 0.9rem;
-    line-height: 2rem;
-    font-weight: bold;
-    color: #ff00aa;
-    overflow: auto;
-    white-space: nowrap;
-}
+    div.table {
+        margin: 2rem 0rem;
+        width: 100%;
+        white-space: pre-wrap;
+        overflow: auto;
+    }
 
-div.table {
-    margin: 2rem 0rem;
-    width: 100%;
-}
+    table {
+        border-left: 0em solid white;
+        border-right: 0em solid white;
+        border-collapse: collapse;
+        width: 100%;
+        border-top: 0.5rem solid black;
+        white-space: pre-line;
+    }
 
-table {
-    border-left: 0em solid white;
-    border-right: 0em solid white;
-    border-collapse: collapse;
-    width: 100%;
-    border-top: 0.5rem solid black;
-}
+    th {
+        padding: 2rem 0;
+    }
 
-th {
-    padding: 2rem 0;
-}
+    tr {
+        line-height: 2rem;
+        overflow: auto;
+    }
 
-tr {
-    line-height: 2rem;
-}
+    th, td {
+        border-bottom: 0.1em solid black;
+        padding: 1.2rem;
+        overflow: auto;
+    }
 
-th, td {
-    border-bottom: 0.1em solid #4b4b4b;
-    padding: 1.2rem;
-}
+    img.sttc, img.prttp {
+        width: 1rem;
+        height: 1rem;
+        margin-left: 0.7rem;
+        filter: invert(100%);
+    }
 
-img.sttc, img.prttp {
-    width: 1rem;
-    height: 1rem;
-    margin-left: 0.7rem;
-}
+    img.thank {
+        filter: invert(100%);
+        width: 5rem;
+    }
 
-img.thank {
-    filter: invert(100%);
-    width: 5rem;
-}
+    div#imgBox {
+        white-space: nowrap;
+        overflow: auto;
+    }
 
-div#imgBox {
-    white-space: nowrap;
-    overflow: auto;
-}
+    div.thanks_box {
+        display: inline;
+        margin-right: 3rem;
+    }
 
-div.thanks_box {
-    display: inline;
-    margin-right: 3rem;
+    section#guide {
+        margin-top: 8rem;
+        margin-bottom: 4rem;
+    }
+
+    span#front {
+        line-height: 5rem;
+    }
+
+    img.arrow {
+        filter: invert(100%);
+        width: 3rem;
+        height: 3rem;
+    }
+
+    p.txt {
+        margin: 0 2rem;
+        font-size: 2rem;
+    }
+
+    i {
+        font-family: 'JetBrains Mono I';
+    }
+
+    div#imgBox {
+        overflow: auto;
+        padding-bottom: 2rem;
+    }
 }
