--- a/style/newToast.css
+++ b/style/newToast.css
@@ -36,3 +36,29 @@ div.danger {
 #toast_con p {
     word-break: break-all;
 }
+
+@media(prefers-color-scheme: dark){
+    #toast_con {
+        background-color: #3a3a3a;
+    }
+
+    #toast_con p {
+        color: white;
+    }
+
+    div.default {
+        box-shadow: 0em 0em 1em 0em #dddddd;
+    }
+    
+    div.success {
+        box-shadow: 0em 0em 1.2em 0em #00ffc8;
+    }
+    
+    div.warning {
+        box-shadow: 0em 0em 1.2em 0em #ffd900;
+    }
+    
+    div.danger {
+        box-shadow: 0em 0em 1.2em 0em #ff009d;
+    }
+}
